[template-editor] Add documentation
+ some code auto-formatting changes